; ModuleID = '/home/carl/AnghaBench/disque/src/extr_networking.c_addDeferredMultiBulkLength.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_networking.c_addDeferredMultiBulkLength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@C_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @addDeferredMultiBulkLength(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = call i64 @prepareClientToWrite(%struct.TYPE_4__* %4)
  %6 = load i64, i64* @C_OK, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %18

9:                                                ; preds = %1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @listAddNodeTail(i32 %12, i32* null)
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i8* @listLast(i32 %16)
  store i8* %17, i8** %2, align 8
  br label %18

18:                                               ; preds = %9, %8
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}

declare dso_local i64 @prepareClientToWrite(%struct.TYPE_4__*) #1

declare dso_local i32 @listAddNodeTail(i32, i32*) #1

declare dso_local i8* @listLast(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
